# MychIO

./: .gitignore  .gitmodules  README.md  package.json
PluginSource/AdxHIDButtonRing/: CMakeLists.txt  build.bat
PluginSource/AdxHIDButtonRing/src/: AdxIO4ButtonRing.cpp  AdxIO4ButtonRing.h
PluginSource/AdxIO4ButtonRing/: .gitignore  CMakeLists.txt
PluginSource/AdxIO4ButtonRing/src/: AdxHIDButtonRing.cpp  AdxHIDButtonRing.h
Runtime/: IOManager.cs  dev.isas.mychio.asmdef
Runtime/Connection/: Connection.Base.cs  Connection.BuildProperties.cs  Connection.cs  ConnectionFactory.cs  ConnectionProperties.cs  ConnectionType.cs  IConnection.cs  IConnectionProperties.cs
Runtime/Connection/HID/: HIDConnection.cs  HidDeviceConnection.cs  HidDeviceProperties.cs  UnityHidApiPlugin.cs
Runtime/Connection/IO4/: IO4Connection.cs
Runtime/Connection/Keyboard/: KeyboardConnection.cs  KeyboardProperties.cs
Runtime/Connection/SerialDevice/: SerialDevice.cs  SerialDeviceConnection.cs  SerialDeviceConstants.cs  SerialDeviceProperties.cs
Runtime/Connection/TouchPanel/: TouchPanelDeviceConnection.cs  TouchPanelDeviceProperties.cs  UnityTouchPanelApiPlugin.cs  WindowsTouchEvent.cs
Runtime/Device/: Device.Base.cs  Device.BuildProperties.cs  DeviceClassification.cs  DeviceFactory.cs  IDevice.cs  IDeviceErrorHandler.cs  InputState.cs
Runtime/Device/ButtonLED/: LedInteractions.cs
Runtime/Device/ButtonRing/: AdxHIDButtonRing.cs  AdxIO4ButtonRing.cs  ButtonRingZone.cs
Runtime/Device/DancePadDevice/: DancePadCommand.cs  DancePadZone.cs  LTEKHIDDancePad.cs
Runtime/Device/Keyboard/: KeyboardDevice.cs
Runtime/Device/LedDevice/: AdxLedDevice.cs  LedDeviceCommand.cs  LedInteractions.cs
Runtime/Device/TouchPanel/: AdxTouchPanel.cs  TouchPanelCommand.cs  TouchPanelTouchPanel.cs  TouchPanelZone.cs
Runtime/Event/: IOEvent.cs
Runtime/Generic/: IIdentifier.cs
Runtime/Helper/: ArrayHelper.cs  HelperFunctions.cs  WindowHandleHelper.cs
Runtime/Unity/: CoroutineRunner.cs
